[package]
name = "polars-ad-hoc"
version = "0.1.0"
edition = "2021"
authors = ["Seongsu Park <seongs1024@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seongs1024/polars-ad-hoc"
description = """
Utilities for Polars
"""
categories = ["data-structure"]
keywords = ["polars", "dataframe"]

[dependencies]
async-trait = "0.1.64"
binance-rs-async = { version = "1.3.1", default-features = false, features = ["futures_api", "native-tls"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
polars = { version = "0.27.2", default-features = false, features = ["json", "fmt", "lazy"] }
serde_json = { version = "1.0.93", default-features = false }
tokio = { version = "1.25.0", default-features = false, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }

[[bench]]
name = "timestamp"
harness = false
