[workspace]
members = ["ts-builder", "cs-fetcher"]
default-members = ["ts-builder", "cs-fetcher"]
resolver = "2"

[workspace.package]
name = "polars-ad-hoc"
version = "0.3.0"
edition = "2021"
authors = ["Seongsu Park <seongs1024@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seongs1024/polars-ad-hoc"
description = """
Utilities for Polars
"""
categories = ["data-structure"]
keywords = ["polars", "dataframe"]

[workspace.dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde", "std", "clock"] }
serde = { version = "1.0.181", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.104", default-features = false, features = ["std"] }


#[features]
#default = ["fetch-candlesticks"]

#fetch-candlesticks = ["timestamp-builder", "chrono", "binance-rs-async", 'serde_json', "tokio", "futures"]
#timestamp-builder = ["chrono"]

#[dependencies]
#polars = { version = "0.27.2", default-features = false, features = ["json", "fmt", "lazy", "parquet"] }

#chrono = { version = "0.4.23", default-features = false, features = ["clock"], optional = true }
#binance-rs-async = { version = "1.3.1", default-features = false, features = ["futures_api", "native-tls"], optional = true }
#serde_json = { version = "1.0.93", default-features = false, optional = true }
#tokio = { version = "1.25.0", default-features = false, features = ["rt-multi-thread"], optional = true }
#futures = { version = "0.3.26", default-features = false, optional = true }

#[dev-dependencies]
#criterion = { version = "0.4.0", default-features = false}

#[[bench]]
#name = "timestamp"
#harness = false

#[lib]
#name = "fetch_candlesticks_traits"
#path = "src/lib.rs"

#[[bin]]
#name = "fetcher"
#path = "src/bin.rs"
