[package]
name = "cs-fetcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = """
Candlestick fetcher
"""

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

ts-builder = { version = "0.3.0" }

polars = { version = "0.27.2", default-features = false, features = ["json", "fmt", "lazy", "parquet"] }
binance-rs-async = { version = "1.3.1", default-features = false, features = ["futures_api", "native-tls"]}
tokio = { version = "1.25.0", default-features = false, features = ["rt-multi-thread"]}
futures = { version = "0.3.26", default-features = false}
