[package]
name = "ts-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = """
Timestamp builder
"""

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
